# spline-generator

./: Cargo.toml  Gemfile  README.md  botpath_template.qc  cli.rb  index.html  main.rb  spline.rb  web.rb
.github/workflows/: deploy-pages.yml
botpath_rust/: Cargo.toml
botpath_rust/src/: camera.rs  gui.rs  lib.rs  map.rs  shader.wgsl  texture.rs
botpath_rust/src/world/: camera.rs  map.rs  mod.rs  spline.rs  spline_shader.wgsl
botpath_rust/src/world/spline/: export.rs  mod.rs
lib/: file_parser.rb  model.rb  parser.rb  texture.rb  vector_ext.rb
site/: index.html
src/: gui.rs  lib.rs  main.rs
src/world/: map.rs  mod.rs
src/world/spline/: export.rs  mod.rs  spline_shader.wgsl
