[package]
name = "botpath_rust"
version = "1.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.14", features = [ "derive" ] }
cfg-if = "1"
cgmath = { version = "0.18", features = ["serde"] }
egui = { version = "0.25", features = ["serde"] }
egui-winit = { version = "0.25", default-features = false, features = ["links"]}
egui-wgpu = "0.25"
env_logger = "0.10"
log = "0.4"
noop-waker = "0.1"
pollster = "0.3"
regex = "1.10"
rfd = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-time = "0.2"
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "0.18"
zip = "1.3.1"
indoc = "2.0.5"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = { version = "0.25", default-features = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
